add_executable(client_gemm_add_add_fastgelu gemm_add_add_fastgelu.cpp)
target_link_libraries(client_gemm_add_add_fastgelu PRIVATE composable_kernel::device_operations)
#target_link_libraries(client_gemm_add_add_fastgelu PRIVATE composable_kernel::device_operations composable_kernel::host_tensor hip::host)
