add_executable(client_gemm_add_add_layernorm_naive gemm_add_add_layernorm_naive.cpp)
target_link_libraries(client_gemm_add_add_layernorm_naive PRIVATE composable_kernel::device_operations)
target_compile_features(client_gemm_add_add_reduce_normalize PRIVATE cxx_std_17)

add_executable(client_gemm_add_relu_add_layernorm_welford gemm_add_relu_add_layernorm_welford.cpp)
target_link_libraries(client_gemm_add_relu_add_layernorm_welford PRIVATE composable_kernel::device_operations)
target_compile_features(client_gemm_add_relu_add_layernorm_welford PRIVATE cxx_std_17)
