add_executable(client_layernorm2d_fwd layernorm2d_fwd.cpp)
target_link_libraries(client_layernorm2d_fwd PRIVATE composable_kernel::device_other_operations)

target_compile_features(client_layernorm2d_fwd PRIVATE cxx_std_17)

add_executable(client_layernorm4d_fwd layernorm4d_fwd.cpp)
target_link_libraries(client_layernorm4d_fwd PRIVATE composable_kernel::device_other_operations)

target_compile_features(client_layernorm4d_fwd PRIVATE cxx_std_17)
