add_executable(client_fused_attention fused_attention.cpp)
target_link_libraries(client_fused_attention PRIVATE composable_kernel::device_operations)
target_compile_features(client_fused_attention PRIVATE cxx_std_17)

add_executable(client_fused_attention_bias fused_attention_bias.cpp)
target_link_libraries(client_fused_attention_bias PRIVATE composable_kernel::device_operations)
target_compile_features(client_fused_attention_bias PRIVATE cxx_std_17)
